--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>MRC</title>
-        <script>alert('test 123')</script>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="static/css/main.css" type = "text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -76,7 +75,10 @@
                 <div class = "col-lg">
                   <h2> The World of Big Data </h2>
                   <p class = "text-left mt-1 ml-1">
-                    We are MRC Team.
+                    Part of our mysterious galaxy encompasses satellites that roam through the earth gathering billions of data points. 
+                    From the invention of the first computer, technology has drastically improved our collective ability to understand and identify complex relationships.  
+                    Utilizing big data, artificial intelligence, fcc data api and various technology, we created predictive models to help to empower those in need by giving us insight into the specific populations and regions needing the most amount of resources and the best way to deploy the limited amount of resources the earth has. 
+                    By focusing on critical trends in pollution, government policies, demographics / social and economic status,  weather and pre-existing conditions, we can find the most effective way of deploying their sources we have to effectively combat Coronavirus. Right now is the time, where we create a lasting impact to sustain our Earth.
                     </p>
                 </div>
                 <div class = "col-sm mt-1 ml-1">
