--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </ul>
             </div>
           </nav>
-          <iframe id="human-embed" frameBorder="0" width="640" height="480" allowFullScreen="true" src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
+          <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg" title = "Coronal Virus Interactive Map"></iframe>
           <section class = "section backcolorOffwhite" id = "intro">
             <div class = "container">
               
