--- a/index.html
+++ b/index.html
@@ -72,10 +72,18 @@
               <head>
                 <title>Coronavirus Interactive Map</title>
                 <style>
+                  iframe{
+                    width : 500px;
+                    height: 500px;
+                    margin-left: auto;
+                    margin-right: auto;
+                  }
                 </style>
               </head>
-          <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
-          
+              <body>
+          <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg">
+                </iframe>
+              </body>
           </html>
           
           <section class = "section backcolorOffwhite" id = "intro">
