--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class = "container">
               <div class = "row text-center">
                 <div class="col-md-12 text-center">
-                  <h3> Interactive Model </h3>
+                  <h3> Interactive 3D Model of Coronavirus </h3>
                   <br>
                   <!-- Coronavirus Interactive Map -->
           <!DOCTYPE html>
