--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "column">
                     <img src = "#" class = "profile-pic">
+
+                    <!--drop down menus  -->
+
+                  <div class ="dropdown" >
+                    <button class = "dropbtn"></button>
+                    <div class = "dropdown-content">
+                    </div>
+                  </div>
                   </div>
                 </div>
               </div>
