--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
           <section class = "section backcolorOffwhite" id = "intro">
             <div class = "container">
               
+
+              <!--Insert logo image  -->
+              <img src="Teamlogo.png">
               <!-- Introduction-->
               <div class = "row">
                 <div class = "col-lg">
