--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               
 
               <!--Insert logo image  -->
-              <img src="Teamlogo.png" style="width:128px;height:128px;">
+              <img src="Teamlogo.png" style="width:128px;height:128px;" class="center">
               <!-- Introduction-->
               <div class = "row">
                 <div class = "col-lg">
