--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
 
               <!--Insert logo image  -->
               <img src="Teamlogo.png" style="width:128px;height:128px;" class="center">
+              .center{
+                  display: block;
+                  margin-left: auto;
+                  margin-right: auto;
+                  width: 50%;
+              }
               <!-- Introduction-->
               <div class = "row">
                 <div class = "col-lg">
