--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@
               
 
               <!--Insert logo image  -->
-              <img src="Teamlogo.png" style="width:128px;height:128px;" class="center"
-              .center{
-                  display: block;
-                  margin-left: auto;
-                  margin-right: auto;
-                  width: 50%;
-              }>
+              <img src="Teamlogo.png" style="width:200px;height:200px;" class="center">
               <!-- Introduction-->
               <div class = "row">
                 <div class = "col-lg">
