--- a/index.html
+++ b/index.html
@@ -111,11 +111,14 @@
                       <li class="nav-item line_effect">
                         <a class="nav-link" href="#contactMe" style = "text-decoration:none">Government</a>
                       </li>
-                      
-                      <li class="nav-item line_effect"></li>
+
+                      <li class="nav-item line_effect">
                         <a class="nav-link" href="#contactMe" style = "text-decoration:none">Weather</a>
                       <li class="nav-item line_effect">
 
+                      <li class = "nav-item line effect">
+                         <a class="nav-link" href="#contactMe" style = "text-decoration:none">Diseases</a>
+                      </li class = "nav-item line effect">
 
 
                       </li>
