--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     By focusing on critical trends in pollution, government policies, demographics / social and economic status,  weather and pre-existing conditions, we can find the most effective way of deploying their sources we have to effectively combat Coronavirus. Right now is the time, where we create a lasting impact to sustain our Earth.
                     </p>
                 </div>
-                
+              </div>
                 <!-- Navbar -->
                 <nav class="navbar navbar-expand-sm ml-auto sticky-top bottomBorderRedgrad backcolorWhite">
                   <!-- Currently sticky option is off, to have sticky option: sticky-top -->
@@ -125,7 +125,10 @@
                     </ul>
                   </div>
                   </nav>
+                </section>
                 
+
+
                 </div>
               </div>
             </div>
