--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 <li class="nav-item line_effect">
                   <a class="nav-link" href="#contactMe" style = "text-decoration:none">Interactive Model</a>
                 </li>
+
+                <li class="nav-item line effect">
+                  <a class="nav-link" href ="#contactMe" style = "text-decoration:none">Contacts</a>
+                </li>
               </ul>
             </div>
           </nav>
