--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 <li class="nav-item line_effect">
                   <a class="nav-link" href="#personal_details" style = "text-decoration:none">Methodology</a>
                 </li>
+
+                <li class="nav-item line_effect">
+                  <a class="nav-link" href="#personal_details" style="text-decoration:none">Data Sources</a>
+                </li>
     
                 <li class="nav-item line_effect">
                   <a class="nav-link" href="#contactMe" style = "text-decoration:none">Interactive Model</a>
