change in pannel

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 <li class="nav-item line_effect">
                   <a class="nav-link" href="#personal_details" style="text-decoration:none">Data Sources</a>
                 </li>
+
+              </li display="inline";>
     
                 <li class="nav-item line_effect">
                   <a class="nav-link" href="#contactMe" style = "text-decoration:none">Interactive Model</a>
