--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
                         </a>
                         <ul class= "dropdown-menu">
                           <li><a herf ="#personal_details"> Demographics</a></li>
-                          <li><a herf ="#personal_details"> Demographics</a></li>
-                          <li><a herf ="#personal_details"> Demographics</a></li>
+                          <li><a herf ="#personal_details"> Weather</a></li>
+                          <li><a herf ="#personal_details"> Government</a></li>
                           <li><a herf ="#personal_details"> Demographics</a></li>
                           <li><a herf ="#personal_details"> Demographics</a></li>
                         </ul>
                       </li>
-                      <li></li>
+                      <li><a herf= "#contactMe">Interactive Model</a></li>
+                      <li><a herf= "#contactMe">contacts</a></li>
                     </ul>
                   </div>
                 </nav>
