--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                       <a class ="navbar-brand"> MRC</a>
                     </div>
                     <ul class = "nav navbar-nav">
-                      <li class = "active"><a href = "#index.htmlintro">Home</a></li>
+                      <li><a href = "#index.htmlintro">Home</a></li>
+                      <li><a href = "#personal_details">Methodology</a></li>
                       <li class= "dropdown">
                         <a class= "dropdown-toggle" data-toggle ="dropdown" href="#personal_details">Data Sources
                           <span class="caret"></span>
