--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
               </div>
 
                 <!-- Navbar Solomon  Version -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 
                 <nav class ="navbar navbar-inverse">
                   <div class = "container-fluid">
