--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                
+
                 <nav class ="navbar navbar-inverse">
                   <div class = "container-fluid">
                     <div class ="navbar-header">
@@ -125,8 +125,8 @@
                           <li><a herf ="#personal_details"> Demographics</a></li>
                           <li><a herf ="#personal_details"> Weather</a></li>
                           <li><a herf ="#personal_details"> Government</a></li>
-                          <li><a herf ="#personal_details"> Demographics</a></li>
-                          <li><a herf ="#personal_details"> Demographics</a></li>
+                          <li><a herf ="#personal_details"> Disease</a></li>
+                          <li><a herf ="#personal_details"> Pollution</a></li>
                         </ul>
                       </li>
                       <li><a herf= "#contactMe">Interactive Model</a></li>
