Added dropdown menu

--- a/index.html
+++ b/index.html
@@ -56,7 +56,20 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <ul class="navbar-nav">
                 <li class="nav-item active line_effect">
-                  <a class="nav-link" href="index.html#intro" style = "text-decoration:none">Home<span class="sr-only">(current)</span></a>
+                  <a class="nav-link"  href="index.html#intro" style = "text-decoration:none">Home<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item dropdown line_effect">
+                  <a class="nav-link dropdown-toggle" href="#ds" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Data Sources
+                  </a>
+                  <div class = "dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <a class = "dropdown-item" href = "#env">Environment</a>
+                    <a class = "dropdown-item" href = "#env">Pollution</a>
+                    <a class = "dropdown-item" href = "#env">Diseases</a>
+                    <a class = "dropdown-item" href = "#env">Government</a>
+                    <a class = "dropdown-item" href = "#env">Demographics</a>
+                  </div>
                 </li>
     
                 <li class="nav-item line_effect">
@@ -64,22 +77,13 @@
                 </li>
 
                 <li class="nav-item line_effect">
-                  <a class="nav-link" href="#personal_details" style="text-decoration:none">Data Sources</a>
-                </li>
-
-              </li display="inline";>
-    
-                <li class="nav-item line_effect">
                   <a class="nav-link" href="#contactMe" style = "text-decoration:none">Interactive Model</a>
                 </li>
 
-                <li class="nav-item line effect">
-                  <a class="nav-link" href ="#contactMe" style = "text-decoration:none">Contacts</a>
-
-                </li border-right="1px solid">
-
-
+                <li class="nav-item line_effect">
+                  <a class="nav-link" href="#contactMe" style = "text-decoration:none">Social Media</a>
                 </li>
+
               </ul>
             </div>
           </nav>
