--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </li>
     
                 <li class="nav-item line_effect">
-                  <a class="nav-link" href="#personal_details" style = "text-decoration:none">Methodology</a>
+                  <a class="nav-link" href="#method" style = "text-decoration:none">Methodology</a>
                 </li>
 
                 <li class="nav-item line_effect">
