comments for pollutionr

--- a/index.html
+++ b/index.html
@@ -125,7 +125,13 @@
                 
                 <div class = "col-lg text-left mt-1 ml-1">
                   <h2 style='width:fit-content; width:-webkit-fit-content; width:-moz-fit-content;'> Environment <br></h2>
-                  <p class> TBD TBD
+                  <p class> The level of pollution each country has produced is the most  dramatic change caused by the coronavirusLevels have dropped significantly after this pandemic began. 
+                    This is caused by factories closing down and just in general a lower movement by people. 
+                    Following social distancing rules and stay at home order, it  has created a better environment for people. 
+                    Pollution levels are a very important factor that needs to be considered because when there are high levels of pollution, there is also a high exertion of NO2 gas and nitrate which is extremely dangerous to humans. 
+                    Nitrate has the ability to penetrate deep into the lungs and then into the bloodstream causing people to get heart problems and other fatal diseases. (Hernandez, 2020 )This is a determinate especially during this pandemic. 
+                    The corona virus is known to have a low mortality rate ranging between 5.9 % to 16.3% (Hopkins, 2020). But the level increases with other diseases considered. Levels can spike up to 41% which makes it a very important factor to consider. 
+                    Below there are graphs attached that show dramatic changes with countries after the pandemic. As stores and factories begin to reopen, we need to monitor the amount of pollutant released or else the second wave of the coronavirus may be worse than the original having a higher fatality rate.
                   </p>
                 </div>
                 <div class = "col-sm mt-1 ml-1">
