--- a/index.html
+++ b/index.html
@@ -325,7 +325,26 @@
                       <br>
                       
                       <p>
-                        TBD TBD
+                          Adams, M. (2020, August 3). Early Release - Population-Based Estimates of Chronic Conditions Affecting Risk for Complications from Coronavirus Disease, United States - Volume 26, Number 8-August 2020 - Emerging Infectious Diseases journal - CDC. Retrieved May 30, 2020, from https://wwwnc.cdc.gov/eid/article/26/8/20-0679_article
+                          Berrick, S. (2004, October 1). Earthdata Search. Retrieved May 30, 2020, from https://search.earthdata.nasa.gov/search/granules?p=C1266136111-GES_DISC
+                          Berrick, S. (2020, May 30). Find Environmental Impacts Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/environmental-impacts
+                          Berrick, S. (2020, May 12). Find Seasonality Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/seasonality
+                          E. (Ed.). (2020, May 18). JHU Centers for Civic Impact Covid-19 County Cases (Daily Update). Retrieved May 30, 2020, from https://coronavirus-resources.esri.com/datasets/4cb598ae041348fb92270f102a6783cb/data?layer=1
+                          G. (2020). COVID-19 Community Mobility Report. Retrieved May 30, 2020, from https://www.google.com/covid19/mobility/
+                          Hernandez, M. (2020). This is the effect coronavirus has had on air pollution all across the world. Retrieved May 30, 2020, from https://www.weforum.org/agenda/2020/04/coronavirus-covid19-air-pollution-enviroment-nature-lockdown/
+                          IHME: COVID-19 Projections. (2020, May 26). Retrieved May 29, 2020, from https://covid19.healthdata.org/united-states-of-america
+                          J. (Ed.). (2020, May 27). Mortality Analyses. Retrieved May 30, 2020, from https://coronavirus.jhu.edu/data/mortality
+                          Jari Hovila, Antii Arola, and Johanna Tamminen (2014), OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3, NASA Goddard Space Flight Center, Goddard Earth Sciences Data and Information Services Center (GES DISC), Accessed: [Data Access Date], 10.5067/Aura/OMI/DATA2028
+                          Levy, R. (2019, May 16). Earth at Night (Black Marble) 2016 Grayscale Maps. Retrieved May 30, 2020, from https://visibleearth.nasa.gov/images/144897/earth-at-night-black-marble-2016-grayscale-maps
+                          Leonard, A. (2020, April 24). Hokkaido Forced to Reinstate Lockdown After Coronavirus Returned. Retrieved May 29, 2020, from https://time.com/5826918/hokkaido-coronavirus-lockdown/
+                          N. (Ed.). (2020, April 22). COVID-19 in Racial and Ethnic Minority Groups. Retrieved May 29, 2020, from https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/racial-ethnic-minorities.html
+                          Ogden, C. (2017, August 01). Overweight & Obesity Statistics. Retrieved May 30, 2020, from https://www.niddk.nih.gov/health-information/health-statistics/overweight-obesity
+                          Pender, J. (2020). Download Data. Retrieved May 30, 2020, from https://www.ers.usda.gov/data-products/county-level-data-sets/download-data/
+                          Powell, A. (2020, April 14). Warm weather may have no impact on COVID-19. Retrieved May 29, 2020, from https://news.harvard.edu/gazette/story/2020/04/covid-19-may-not-go-away-in-warmer-weather-as-do-colds/
+                          U. (2020). Explore Health Rankings: Rankings Data & Documentation. Retrieved May 30, 2020, from https://www.countyhealthrankings.org/explore-health-rankings/rankings-data-documentation?fbclid=IwAR0sUOv2BU7j4UH8I5EL-g-vt1peVY37ZKQeQ6z94l7DQn6cNNIBw_zaZ00
+                          Wan, Z., Hook, S., Hulley, G. (2015). MYD11C1 MODIS/Aqua Land Surface Temperature/Emissivity Daily L3 Global 0.05Deg CMG V006 [Data set]. NASA EOSDIS Land Processes DAAC. Accessed 2020-05-28 from https://doi.org/10.5067/MODIS/MYD11C1.006
+                          Xie, J., & Zhu, Y. (2020, July 1). Association between ambient temperature and COVID-19 infection in 122 cities from China. Retrieved May 29, 2020, from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7142675/
+                          
                       </p>
                     </div>
                   </div>
