--- a/index.html
+++ b/index.html
@@ -325,16 +325,16 @@
                       <br>
                       
                       <p>
-                          Adams, M. (2020, August 3). Early Release - Population-Based Estimates of Chronic Conditions Affecting Risk for Complications from Coronavirus Disease, United States - Volume 26, Number 8-August 2020 - Emerging Infectious Diseases journal - CDC. Retrieved May 30, 2020, from https://wwwnc.cdc.gov/eid/article/26/8/20-0679_article
-                          Berrick, S. (2004, October 1). Earthdata Search. Retrieved May 30, 2020, from https://search.earthdata.nasa.gov/search/granules?p=C1266136111-GES_DISC
-                          Berrick, S. (2020, May 30). Find Environmental Impacts Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/environmental-impacts
-                          Berrick, S. (2020, May 12). Find Seasonality Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/seasonality
-                          E. (Ed.). (2020, May 18). JHU Centers for Civic Impact Covid-19 County Cases (Daily Update). Retrieved May 30, 2020, from https://coronavirus-resources.esri.com/datasets/4cb598ae041348fb92270f102a6783cb/data?layer=1
-                          G. (2020). COVID-19 Community Mobility Report. Retrieved May 30, 2020, from https://www.google.com/covid19/mobility/
-                          Hernandez, M. (2020). This is the effect coronavirus has had on air pollution all across the world. Retrieved May 30, 2020, from https://www.weforum.org/agenda/2020/04/coronavirus-covid19-air-pollution-enviroment-nature-lockdown/
-                          IHME: COVID-19 Projections. (2020, May 26). Retrieved May 29, 2020, from https://covid19.healthdata.org/united-states-of-america
-                          J. (Ed.). (2020, May 27). Mortality Analyses. Retrieved May 30, 2020, from https://coronavirus.jhu.edu/data/mortality
-                          Jari Hovila, Antii Arola, and Johanna Tamminen (2014), OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3, NASA Goddard Space Flight Center, Goddard Earth Sciences Data and Information Services Center (GES DISC), Accessed: [Data Access Date], 10.5067/Aura/OMI/DATA2028
+                          Adams, M. (2020, August 3). Early Release - Population-Based Estimates of Chronic Conditions Affecting Risk for Complications from Coronavirus Disease, United States - Volume 26, Number 8-August 2020 - Emerging Infectious Diseases journal - CDC. Retrieved May 30, 2020, from https://wwwnc.cdc.gov/eid/article/26/8/20-0679_article;
+                          Berrick, S. (2004, October 1). Earthdata Search. Retrieved May 30, 2020, from https://search.earthdata.nasa.gov/search/granules?p=C1266136111-GES_DISC;
+                          Berrick, S. (2020, May 30). Find Environmental Impacts Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/environmental-impacts;
+                          Berrick, S. (2020, May 12). Find Seasonality Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/seasonality;
+                          E. (Ed.). (2020, May 18). JHU Centers for Civic Impact Covid-19 County Cases (Daily Update). Retrieved May 30, 2020, from https://coronavirus-resources.esri.com/datasets/4cb598ae041348fb92270f102a6783cb/data?layer=1;
+                          G. (2020). COVID-19 Community Mobility Report. Retrieved May 30, 2020, from https://www.google.com/covid19/mobility/;
+                          Hernandez, M. (2020). This is the effect coronavirus has had on air pollution all across the world. Retrieved May 30, 2020, from https://www.weforum.org/agenda/2020/04/coronavirus-covid19-air-pollution-enviroment-nature-lockdown/;
+                          IHME: COVID-19 Projections. (2020, May 26). Retrieved May 29, 2020, from https://covid19.healthdata.org/united-states-of-america;
+                          J. (Ed.). (2020, May 27). Mortality Analyses. Retrieved May 30, 2020, from https://coronavirus.jhu.edu/data/mortality;
+                          Jari Hovila, Antii Arola, and Johanna Tamminen (2014), OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3, NASA Goddard Space Flight Center, Goddard Earth Sciences Data and Information Services Center (GES DISC), Accessed: [Data Access Date], 10.5067/Aura/OMI/DATA2028;
                           Levy, R. (2019, May 16). Earth at Night (Black Marble) 2016 Grayscale Maps. Retrieved May 30, 2020, from https://visibleearth.nasa.gov/images/144897/earth-at-night-black-marble-2016-grayscale-maps
                           Leonard, A. (2020, April 24). Hokkaido Forced to Reinstate Lockdown After Coronavirus Returned. Retrieved May 29, 2020, from https://time.com/5826918/hokkaido-coronavirus-lockdown/
                           N. (Ed.). (2020, April 22). COVID-19 in Racial and Ethnic Minority Groups. Retrieved May 29, 2020, from https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/racial-ethnic-minorities.html
