--- a/index.html
+++ b/index.html
@@ -325,8 +325,12 @@
                       <br>
                       
                       <p>
-                          Adams, M. (2020, August 3). Early Release - Population-Based Estimates of Chronic Conditions Affecting Risk for Complications from Coronavirus Disease, United States - Volume 26, Number 8-August 2020 - Emerging Infectious Diseases journal - CDC. Retrieved May 30, 2020, from https://wwwnc.cdc.gov/eid/article/26/8/20-0679_article;
+                        <br>
+                          Adams, M. (2020, August 3). Early Release - Population-Based Estimates of Chronic Conditions Affecting Risk for Complications from Coronavirus Disease, United States - Volume 26, Number 8-August 2020 - Emerging Infectious Diseases journal - CDC. Retrieved May 30, 2020, from https://wwwnc.cdc.gov/eid/article/26/8/20-0679_article
+                        <br>
+                        <br>
                           Berrick, S. (2004, October 1). Earthdata Search. Retrieved May 30, 2020, from https://search.earthdata.nasa.gov/search/granules?p=C1266136111-GES_DISC;
+                        <br>
                           Berrick, S. (2020, May 30). Find Environmental Impacts Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/environmental-impacts;
                           Berrick, S. (2020, May 12). Find Seasonality Data. Retrieved May 30, 2020, from https://earthdata.nasa.gov/learn/pathfinders/covid-19/seasonality;
                           E. (Ed.). (2020, May 18). JHU Centers for Civic Impact Covid-19 County Cases (Daily Update). Retrieved May 30, 2020, from https://coronavirus-resources.esri.com/datasets/4cb598ae041348fb92270f102a6783cb/data?layer=1;
