--- a/index.html
+++ b/index.html
@@ -434,6 +434,8 @@
                       <h3>Social Media!</h3>
                       <p>
                         <br>
+                        <title>Instagram Pages</title>
+                        <br>
                         <!-- Let's keep in touch!<br><br>
                         <a href = "tel: +720 499 7315" class="fas fa-mobile-alt fa-2x hover_tel" style = "text-decoration:none"></a>   
                         <a href = "https://www.linkedin.com/in/alexander-hsia" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>   
