--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                       <p>
                         <br>
                         <div class = "row_contact text-center">
-                            <div class = "counting-sec red_grad_bgd">
+                            <div class = "counting-sec blue_grad_bgd">
                               <div class = "inner-width">
                                 <div class="col-md-3 col_fact">
                                   <div class = "num">9</div>
