--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
                             <div class = "counting-sec red_grad_bgd">
                               <div class = "inner-width">
                                 <div class="col-md-3 col_fact">
-                                  <div class = "aside">
+                                  <div class = "cities">
+                                    <h2>Instagram </h2>
                                     <a href = "https://www.instagram.com/mrccovid192020/"></a>
                                   </div>
                                   Sources
