--- a/index.html
+++ b/index.html
@@ -441,7 +441,13 @@
                                   <div class = "cities">
                                     <h2>Instagram </h2>
                                   </div>
+                                  <p>Team Instagram</p>T
+                                  <br>
                                   <a href = "https://www.instagram.com/mrccovid192020/"></a>
+                                  <br>
+                                  </div>
+                                  Alex Hsia
+                                  <a href = "https://www.instagram.com/hsia.alexander/"></a>
                                 </div>
                                 <div class="col-md-3 col_fact">
                                   <div class = "num">5</div>
