--- a/index.html
+++ b/index.html
@@ -442,13 +442,13 @@
                                     <h2>Instagram </h2>
                                   </div>
                                   <p>Team Instagram</p>T
-                                  <br>
-                                  <a href = "https://www.instagram.com/mrccovid192020/"></a>
-                                  <br>
                                   </div>
-                                  Alex Hsia
+                                  <a href = "https://www.instagram.com/mrccovid192020/"></a>
+                                  </div>
+                                  </div>
+                                  <p>Alexander Hsia</p>
                                   <a href = "https://www.instagram.com/hsia.alexander/"></a>
-                                </div>
+                                  </div>
                                 <div class="col-md-3 col_fact">
                                   <div class = "num">5</div>
                                   Data Types
