--- a/index.html
+++ b/index.html
@@ -439,11 +439,13 @@
                               <div class = "inner-width">
                                 <div class="col-md-3 col_fact">
                                   <div class = "cities">
-                                    <h2>Instagram </h2>
+                                    <h2>Instagram Tags</h2>
+                                    <p>
+                                        <a href = "https://www.instagram.com/mrccovid192020/"></a>
+                                    </p>
+                                    
                                   </div>
-                                  Team Instagram
-                                  <a href = "https://www.instagram.com/mrccovid192020/"></a>
-                                  </div>
+                                  Sources
                                 </div>
                                 <div class="col-md-3 col_fact">
                                   <div class = "num">5</div>
