--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                   <div class = "cities">
                                     <h2>Instagram </h2>
                                   </div>
-                                  Sources
+                                  <a href = "https://www.instagram.com/mrccovid192020/"></a>
                                 </div>
                                 <div class="col-md-3 col_fact">
                                   <div class = "num">5</div>
