--- a/index.html
+++ b/index.html
@@ -434,34 +434,8 @@
                       <h3>Social Media!</h3>
                       <p>
                         <br>
-                        <div class = "row_contact text-center">
-                            <div class = "counting-sec red_grad_bgd">
-                              <div class = "inner-width">
-                                <div class="col-md-3 col_fact">
-                                  <div class = "cities">
-                                    <h2>Instagram </h2>
-                                  </div>
-                                    <br>
-                                      <a href = "https://www.instagram.com/mrccovid192020/"></a>
-                                    <br>
-                                </div>
-                                <div class="col-md-3 col_fact">
-                                  <div class = "num">5</div>
-                                  Data Types
-                                  <!-- Java, Python, C++, C, SQL, GoLang, MATLAB, R -->
-                                </div>
-                                <div class="col-md-3 col_fact">
-                                  <div class = "num">40</div>
-                                  Features
-                                </div>
-                                <div class="col-md-3 col_fact">
-                                  <div class = "num">1</div>
-                                  Long Short Term Memory Machine Learning Model
-                                </div>
-                              </div>  
-                            </div>
-                            </div>
-                          </div>
+                        <a href = "https://www.instagram.com/mrccovid192020/"></a>
+                        <a href = "https://www.instagram.com/hsia.alexander/"></a>
                         <!-- Let's keep in touch!<br><br>
                         <a href = "tel: +720 499 7315" class="fas fa-mobile-alt fa-2x hover_tel" style = "text-decoration:none"></a>   
                         <a href = "https://www.linkedin.com/in/alexander-hsia" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>   
