--- a/index.html
+++ b/index.html
@@ -434,8 +434,13 @@
                       <h3>Social Media!</h3>
                       <p>
                         <br>
-                        <a href = "https://www.instagram.com/mrccovid192020/"></a>
-                        <a href = "https://www.instagram.com/hsia.alexander/"></a>
+                        <a href = "https://www.instagram.com/mrccovid192020/">Team Instagram</a>
+                        <a href = "https://www.instagram.com/hsia.alexander/">Alexander Hsia</a>
+                        <a href = "https://www.instagram.com/erriclian/">Eric Lian</a>
+                        <a href = "https://www.instagram.com/sabtt17/">Sabrina Tobar</a>
+                        <a href = "https://www.instagram.com/skychen1060/">Sky Chen</a>
+                        <a href = "https://www.instagram.com/solomon_the_bae/">Solomon Chang</a>
+                        <br>
                         <!-- Let's keep in touch!<br><br>
                         <a href = "tel: +720 499 7315" class="fas fa-mobile-alt fa-2x hover_tel" style = "text-decoration:none"></a>   
                         <a href = "https://www.linkedin.com/in/alexander-hsia" class="fab fa-linkedin-in fa-2x" style = "text-decoration:none"></a>   
