--- a/index.html
+++ b/index.html
@@ -433,13 +433,25 @@
                     <div class="col-md-8 text-center">
                       <h3>Social Media!</h3>
                       <p>
+                        <title>Instagrams</title>
                         <br>
-                        <a href = "https://www.instagram.com/mrccovid192020/">Team Instagram</a>
+                        <a href = "https://www.instagram.com/mrccovid192020/">MRC</a>
+                        <br>
+                        <br>
                         <a href = "https://www.instagram.com/hsia.alexander/">Alexander Hsia</a>
+                        <br>
+                        <br>
                         <a href = "https://www.instagram.com/erriclian/">Eric Lian</a>
+                        <br>
+                        <br>
                         <a href = "https://www.instagram.com/sabtt17/">Sabrina Tobar</a>
+                        <br>
+                        <br>
                         <a href = "https://www.instagram.com/skychen1060/">Sky Chen</a>
+                        <br>
+                        <br>
                         <a href = "https://www.instagram.com/solomon_the_bae/">Solomon Chang</a>
+                        <br>
                         <br>
                         <!-- Let's keep in touch!<br><br>
                         <a href = "tel: +720 499 7315" class="fas fa-mobile-alt fa-2x hover_tel" style = "text-decoration:none"></a>   
