--- a/index.html
+++ b/index.html
@@ -435,22 +435,44 @@
                       <p>
                         <title>Instagrams</title>
                         <br>
-                        <a href = "https://www.instagram.com/mrccovid192020/">MRC</a>
+                        <a href = "https://www.instagram.com/mrccovid192020/">@mrccovid192020</a>
                         <br>
                         <br>
-                        <a href = "https://www.instagram.com/hsia.alexander/">Alexander Hsia</a>
+                        <a href = "https://www.instagram.com/hsia.alexander/">@hsia.alexander</a>
                         <br>
                         <br>
-                        <a href = "https://www.instagram.com/erriclian/">Eric Lian</a>
+                        <a href = "https://www.instagram.com/erriclian/">@erriclian</a>
                         <br>
                         <br>
-                        <a href = "https://www.instagram.com/sabtt17/">Sabrina Tobar</a>
+                        <<a href = "https://www.instagram.com/gabriel.garfinkel/">@gabriel.garfinkel</a>
                         <br>
                         <br>
-                        <a href = "https://www.instagram.com/skychen1060/">Sky Chen</a>
+                        <a href = "https://www.instagram.com/sabtt17/">@sabtt17</a>
                         <br>
                         <br>
-                        <a href = "https://www.instagram.com/solomon_the_bae/">Solomon Chang</a>
+                        <a href = "https://www.instagram.com/skychen1060/">@skychen1060</a>
+                        <br>
+                        <br>
+                        <a href = "https://www.instagram.com/solomon_the_bae/">@solomon_the_bae</a>
+                        <br>
+                        <br>
+                        <!-- linkdeon profiles -->
+                        <a href = "https://www.linkedin.com/in/alexander-hsia/">Alexander Hsia</a>
+                        <br>
+                        <br>
+                        <a href = "https://www.linkedin.com/in/ericlian419/"> Eric Lian</a>
+                        <br>
+                        <br>
+                        <<a href = "https://www.linkedin.com/in/gabriel-garfinkel/">Gabriel Garfinkel</a>
+                        <br>
+                        <br>
+                        <a href = "https://www.linkedin.com/in/sabrina-tobar-thommel/">Sabrina Tobar Thommel</a>
+                        <br>
+                        <br>
+                        <a href = "https://www.linkedin.com/in/sky-chen-bb1623171/">Sky Chen</a>
+                        <br>
+                        <br>
+                        <a href = "https://www.linkedin.com/in/solomon-chang-161b2b178/">Solomon Chang</a>
                         <br>
                         <br>
                         <!-- Let's keep in touch!<br><br>
