--- a/index.html
+++ b/index.html
@@ -256,7 +256,11 @@
                   <br>
                   <br>
                   <br>
-                  <p class> TBD TBD
+                  <p class> The spread of the coronavirus is extremely contagious, and the current methods of social distancing and stay at home order can only flatten the curve so much.
+                     As states begin to reopen we want to examine places and activities where hot spots can form. 
+                     Utilizing NASA and other open source data , we were able to determine the five largest categories to look at for hot spots. 
+                     The data was read in using python. With the utilizing python functions we were able to merge the files into one large readable data file. That helped us create a good training model for machine learning.
+                      We were also able to create a choropleth using leaflet javascript making an interactive map of places we consider as hot spots. This will allow us to understand what places to look at as hotspots as the regulations begin to loosen. 
                   </p>
                 </div>
 
