Added profile photos

--- a/index.html
+++ b/index.html
@@ -441,23 +441,31 @@
  
               <div class="col">
                 <h5>Alex</h5>
+                <br>
+                <img src = "static/images/alex_square.jpg" class = "profile-pic">
               </div>
               <div class="col">
                 <h5>Eric</h5>
-                <!-- Java, Python, C++, C, SQL, GoLang, MATLAB, R -->
+                <br>
+                <img src = "static/images/eric_photo.jfif" class = "profile-pic">
               </div>
               <div class="col">
                 <h5>Solomon</h5>
+                <br>
+                <img src = "static/images/solomon.jpg" class = "profile-pic">
               </div>
             </div>
-
             <div class = "row text-center top-buffer">
               <div class="col">
                 <h5>Sky</h5>
+                <br>
+                <img src = "static/images/sky_photo.jfif" class = "profile-pic">
+                <br>
               </div>
 
               <div class="col">
                 <h5>Gabe</h5>
+                <br>
               </div>
 
               <div class="col">
