Added gif to social section

--- a/index.html
+++ b/index.html
@@ -213,10 +213,11 @@
 
                     We also fed in historical numer of cases, deaths, incidence rate, new cases, and population per county into the model. This data is important because it provides a historic/near-present trajectory of the number of cases and deaths.
 
+
                     We gathered this information via Johns hopkins University's COVID-19 "USCounties_time" records.
 
                     <br>
-
+                    <br>
                     Additional health information such as life expectancy, poor mental health days was also included in our model, gathered from the Robert Wood Johnson Foundation program, a large philanthropic foundation.
 <!-- 
                     The mortality rate increases with people that have pre-existing conditions.
@@ -240,7 +241,7 @@
             </div>
           </section>
 
-          <section class = "section border-t backcolorNiceYellow" id = dem>
+          <section class = "section border-t" id = dem>
             <div class = "container">
               <div class = "row ">
                 
@@ -264,7 +265,7 @@
                     <br>
                     <br>
 
-                    To better understand population concentrations, night light satellite data from NASA's Suomi-NPP's (National Polar-orbiting Partnership) VIIRS (Visible Infrared Imaging Radiometer Suite) instrument was fed into our model, specifically from the month of January 2020.
+                    To better understand population concentrations, we gathered night light satellite data from NASA's Suomi-NPP's (National Polar-orbiting Partnership) VIIRS (Visible Infrared Imaging Radiometer Suite) instrument from the month of January 2020. However, we were not able to finish formatting and feeding this data into our model in time.
 
                     We also used mobility data from Google to supplement the information to better understand human movements and activities.
                   </p>
@@ -272,7 +273,8 @@
                 <div class = "col-sm mt-1 ml-1">
                   <div class = "hideme">
                     <figure class = "figure">
-                      <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn">
+                      <!-- <img src = "Teamlogo.png" class = "word-chart img-fluid fadeIn"> -->
+                      <img src = "static/images/nasa-worldview-2020-02-18T00_00Z-to-2020-03-26T00_00Z.gif" class = "img-fluid fadeIn">
                     </figure>
                   </div>
                 </div>                  
@@ -357,6 +359,7 @@
                   <br>
                   <!-- Coronavirus Interactive Map -->
 
+                  <!-- If not working, turn off any adblockers and/or try using a different browser -->
                   <iframe src="https://human.biodigital.com/viewer?id=production/maleAdult/coronavirus_structure&ui-chapter-list=true&ui-label-list=true&ui-fullscreen=false&ui-all=true&ui-search=false&load-rotate=1&ui-tools=false&ui-info=false&uaid=5ggxg"></iframe>
               </div>
               </div>
